getting nav bar styles consistent across all pages

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 /* Theme colors
 black - #0C0B0F
-white - #E6DCEC
+white - #F0E7F4
 purple - #5F1C74
 pink - #912261
 light pink - #EADBF9
@@ -8,22 +8,23 @@ blue - #023A83
 inspired by: https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages.fineartamerica.com%2Fimages%2Fartworkimages%2Fmediumlarge%2F1%2Fmoon-fairy-lynne-mcqueen.jpg&f=1&nofb=1&ipt=6d53546b787d8b9e9c912e619e09647ef77dc0cc0e4e94e9e27b93bde4b095d4&ipo=images
 */
 
-/* Theme font */
-@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+/* Theme Google font */
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
 
 /* SITEWIDE */
 body {
     color: #912261;
     font-weight: 800;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'EB Garamond', sans-serif;
     margin: 0 auto;
-    background-color: #E6DCEC;
+    background-color: #F0E7F4;
 }
 
 body a {
     color: #0C0B0F;
     text-transform: uppercase;
     text-decoration: none;
+    font-size: 20px;
 }
 
 body a:hover {
@@ -32,8 +33,7 @@ body a:hover {
 
 /* Nav Bar */
 .nav-bar {
-    height: 80px;
-    padding: 15px;
+    padding: 70px 30px 30px 30px;
     background-color: #EADBF9;
 }
 
@@ -42,9 +42,11 @@ body a:hover {
 }
 
 .nav-list {
+    margin: 0;
     list-style-type: none;
 }
 
 .nav-item {
     display: inline;
+    padding-left: 45px;
 }
