adding content to homepage

--- a/main.css
+++ b/main.css
@@ -13,8 +13,7 @@ inspired by: https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages.
 
 /* SITEWIDE */
 body {
-    color: #912261;
-    font-weight: 800;
+    color: #0C0B0F;
     font-family: 'EB Garamond', sans-serif;
     margin: 0 auto;
     background-color: #F0E7F4;
@@ -23,12 +22,22 @@ body {
 body a {
     color: #0C0B0F;
     text-transform: uppercase;
+    font-weight: 800;
     text-decoration: none;
     font-size: 20px;
 }
 
 body a:hover {
     color: #912261;
+}
+
+body h1,h2,h3,h4,h5,h6 {
+    color: #912261;
+    font-weight: 800;
+}
+
+body p {
+    font-size: 20px;
 }
 
 /* Nav Bar */
@@ -49,4 +58,9 @@ body a:hover {
 .nav-item {
     display: inline;
     padding-left: 45px;
+}
+
+/* Main Body content */
+.content {
+    padding: 0px 30px 0px 30px;
 }
